--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 
 sonarqube {
     properties {
-        property 'sonar.host.url', 'http://34.125.201.58:9000'
+        property 'sonar.host.url', 'http://34.106.62.43:9000/'
         property 'sonar.login', '******'
     }
 }
